overflow issues

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,9 @@ button a {
 	text-decoration: none;
 }
 /* Custom CSS Styles */
+.overflow-hidden {
+	overflow: hidden;
+}
 .full-screen-section {
 	max-width: 100vw;
 	height: 100vh;
